# esp32-bacnet-stack

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  all-agents-combined.md  library.json  platformio.ini
.agents/skills/docs-gate/: SKILL.md
.agents/skills/final-repository-sync/: SKILL.md
.agents/skills/issue-project-sync/: SKILL.md
.agents/skills/safe-branch-cleanup/: SKILL.md
.agents/skills/serena-index-freshness/: SKILL.md
.agents/skills/validation-gate/: SKILL.md
.agents/skills/version-impact/: SKILL.md
.github/: AGENTS.md  FUNDING.yml
.github/agents/: architecture-audit.agent.md  audit.agent.md  branch-cleanup.agent.md  control-plane.agent.md  docs-gate.agent.md  docs.agent.md  issue-project-sync.agent.md  plan.agent.md  project.agent.md  refactor.agent.md  validation-gate.agent.md  workflow.agent.md
.github/workflows/: pio-tests.yml  pio-tests.yml.deactivate  server-ci.yml
.serena/: .gitignore  project.yml
.serena/memories/: core.md
.serena/memories/shared/: agent_workflow_notes.md  architecture.md  bacnet_agent_start_points.md  bacnet_gateway_example_patterns.md  bacnet_open_questions.md  bacnet_reference_landscape.md  bacnet_transport_support_matrix.md  build_and_test_commands.md  esp32_bacnet_porting_candidates.md  esp32_platformio_notes.md  gh-project.md  governance_index.md  known_pitfalls.md  non_reusable_commercial_references.md  project_overview.md  release_rules.md  reusable_stack_architecture_lessons.md
dev-info/: IO-example-esp32-connection.md  XX-example-esp32-connection.md  cpp_common_includes_cheatsheet.md  esp-old-version.md  mustKnow.md
dev-info/Wago_TestServer/: BACNet_Testserver_2026.06.30.wbc  BACNet_Testserver_2026.07.17.wbc  README.md  wbc-basic-export.csv  wbc-cdf.xml
dev-info/Wago_TestServer/BACNet_Server_GPO/: BACNet_Testserver_Analog Input.csv  BACNet_Testserver_Analog Output.csv  BACNet_Testserver_Analog Value.csv  BACNet_Testserver_Binary Input.csv  BACNet_Testserver_Binary Output.csv  BACNet_Testserver_Binary Value.csv  BACNet_Testserver_Device.csv  BACNet_Testserver_File.csv  BACNet_Testserver_File_Analog Input.csv  BACNet_Testserver_File_Analog Output.csv  BACNet_Testserver_File_Analog Value.csv  BACNet_Testserver_File_Binary Input.csv  BACNet_Testserver_File_Binary Output.csv  BACNet_Testserver_File_Binary Value.csv  BACNet_Testserver_File_Bitstring Value.csv  BACNet_Testserver_File_Calendar.csv  BACNet_Testserver_File_Command.csv  BACNet_Testserver_File_Integer Value.csv  BACNet_Testserver_File_Multistate Input.csv  BACNet_Testserver_File_Multistate Output.csv  BACNet_Testserver_File_Multistate Value.csv  (+7 more)
dev-info/Wokwi/: diagram.json  wokwi.toml
docs/: CHANGELOG.md  CONTRIBUTING.md  bacnet-command-priority.md  cov.md  dependency-maintenance.md  governance-agent-runtime.md  license-model.md  release-backcheck.md  repository-settings.md
docs/architecture/: client-server-layer-plan.md
docs/client/: README.md  api.md  examples.md  important.md  known-point-ergonomics.md
docs/server/: README.md  planned.md
examples/ChipInfo/: README.md  platformio.ini
examples/client-demo/: platformio.ini
examples/client-demo-ETH/: README.md  platformio.ini
examples/client-demo-wifi/: README.md  platformio.ini
examples/client-esp-to-esp-demo-eth/: README.md  platformio.ini
examples/client-object-list-scan-basic/: README.md  platformio.ini
examples/common/: BacnetHilPrioritySupport.h  Esp32WiFiNetwork.h  ExampleEthernet.h
examples/hil-cov-espClient-to-espServer-acceptance/: README.md  platformio.ini
examples/hil-wago-client-acceptance/: README.md  platformio.ini
examples/io-example/: README.md  platformio.ini
examples/server-bme280-demo/: README.md  platformio.ini
examples/server-demo/: README.md  platformio.ini
examples/server-esp-to-esp-demo-wifi/: README.md  platformio.ini
examples/server-io-example/: README.md  platformio.ini
src/: ArduinoBacnetClient.h  ArduinoBacnetServer.h  ArduinoEspBacnet.h  BacnetClient.cpp  BacnetClient.h  BacnetDeviceSession.cpp  BacnetDeviceSession.h  BacnetDisplayText.h  BacnetFeatureGates.h  BacnetFixedTextBuffer.h  BacnetLogger.cpp  BacnetLogger.h  BacnetRemoteObject.cpp  BacnetRemoteObject.h  BacnetServer.cpp  BacnetServer.h  EspBacnet.h  main.cpp
src/portable/: BacnetAnalogValueLimits.h  BacnetCommandPriority.h  BacnetDisplayText.h  BacnetProtocol.cpp  BacnetProtocol.h  BacnetRuntime.h  BacnetTypes.h
test/: README  basictest.cpp
tools/: Who-Is.ps1  check-client-demo-parity.ps1  combine.agent.md.ps1  compile-windows-binaries.cmd  precompile_wrapper.py  run-clang-format.ps1  run-cppcheck.ps1  run-precommit-full.ps1
tools/include-fixtures/: platformio.ini
tools/native/: CMakeLists.txt
tools/native/cli/: BacnetCliSupport.cpp  BacnetCliSupport.h  BacnetNativeCli.cpp  BacnetNativeCli.h  BacnetWriteHil.cpp  BacnetWriteHil.h  WindowsInterfaceSelection.cpp  WindowsInterfaceSelection.h  bacnet_cli_smoke.cpp  bacnet_client.cpp  bacnet_discover.cpp  bacnet_discover_smoke.cpp  bacnet_write_hil.cpp
tools/native/examples/: 01-discover-who-is.ps1  02-read-av.ps1  03-read-bv.ps1  04-read-msv.ps1  05-subscribe-av200.ps1  06-list-av.ps1  07-toggle-bv-priority8.ps1  08-relinquish-bv-priority8.ps1  README.md  _common.ps1  settings.ps1
tools/native/test/: cli_support_tests.cpp  demo_binary_value_status_tests.cpp  demo_property_browser_tests.cpp  device_read_protocol_tests.cpp  object_list_scan_tests.cpp  priority_helpers_tests.cpp  priority_write_disabled_tests.cpp  server_client_loopback_tests.cpp  subscribe_cov_protocol_tests.cpp  windows_transport_tests.cpp  write_hil_tests.cpp  write_property_disabled_tests.cpp  write_property_tests.cpp
tools/portable-smoke/: CMakeLists.txt  cov_session_tests.cpp  io_example_input_tests.cpp  portable_smoke.cpp  server_analog_value_tests.cpp  server_cov_tests.cpp  server_object_api_tests.cpp
tools/release/: backcheck-global-example.ps1  check-full.cmd  check-package-content.py
tools/serena/: combine-serena-shared.ps1  export-gh-project-to-serena.ps1
(+63 files in other folders)
